# cooplan-definitions-lib

./: Cargo.toml
src/: definition.rs  error.rs  lib.rs  source_attribute.rs  source_category.rs  validated_source_attribute.rs  validated_source_category.rs
src/cooplan/definitions/: category.rs  error.rs
