[package]
name = "cooplan-definitions-lib"
version = "0.1.1"
edition = "2021"
description = "Essential components for Cooplan's custom definitions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"